--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 	compile "com.h2database:h2:$h2Version"
 	compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
 	compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+    compile "org.projectlombok:lombok:1.18.2"
 
     compile "javax.servlet:jstl:$jstlVersion"
     providedCompile "javax.servlet:javax.servlet-api:$servletApiVersion"
@@ -25,6 +26,7 @@ repositories {
 	maven { url 'http://maven.springframework.org/milestone' }
 	maven { url 'http://maven.springframework.org/snapshot' }
 	maven { url 'http://download.java.net/maven/2' }
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
 	mavenCentral()
 }
 
